--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   google_fonts: ^5.1.0
   provider: ^6.1.2
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,8 @@ flutter:
     - assets/images/
     #    - assets/fonts/
     - assets/files/
+    - assets/translations/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
